:memo: All: Improve Readme, documentation and change linter

--- a/src/connectfour.tex
+++ b/src/connectfour.tex
@@ -5,8 +5,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
-\usepackage[utf8x]{inputenc}
-\usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
 \usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
@@ -38,20 +36,19 @@
 % Inhalt der Umgebung wird in JSDateiname.djs gespeichert und steht im PDF zur Verfügung
 \begin{insDLJS}[]{JSDateiname}{irgendeinTitel}
 
-const GAME_DESC = "Text.\
-Text.\
-Text.\
-Text.\
-Text.";
+const GAME_DESC = "Connect four is a connection board game. The goal is to place a set amount\
+of stones (4) with the given playercolor in such a way that they lie on a strait line.\
+Each turn a player can choose a column in which his stone should be placed.\
+The stones will be placed at the bottom of the column or on top of the current top stone.";
 
 % Outside variables
-const fieldWidth = AFMakeNumber(\fieldWidth);
-const fieldHeight = AFMakeNumber(\fieldHeight);
-const playerCount = AFMakeNumber(\playerCount);
+const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
+const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
+const PLAYER_COUNT = AFMakeNumber(\playerCount);
 const WINNING_PIECES = AFMakeNumber(\winningPieces);
 
 % Constants
-% -
+const EMPTY = 0;
 
 % Globals
 % The game field array
@@ -60,7 +57,7 @@ var activePlayer = 0;
 var gameover = false;
 
 % Color data
-const colors = new Array(
+const COLORS = new Array(
     color.black,
     [ "RGB", 0.843, 0.078, 0.058 ],
     [ "RGB", 0.203, 0.603, 0.054 ],
@@ -68,7 +65,7 @@ const colors = new Array(
     [ "RGB", 0.560, 0.078, 0.533 ]
 );
 
-const highlightcolor = [ "RGB", 0.984, 0.960, 0.176 ];
+const HIGHLIGHT_COLOR = [ "RGB", 0.984, 0.960, 0.176 ];
 
 %%%%%%%%%%%%%%%%%%
 % Initialisation %
@@ -77,21 +74,23 @@ const highlightcolor = [ "RGB", 0.984, 0.960, 0.176 ];
  * Initialise the default game state.
  */
 function initialise() {
-    for (var row = 0; row < fieldHeight; row++) {
+    for (var row = 0; row < FIELD_HEIGHT; row++) {
         var tmp = new Array();
-        for (var column = 0; column < fieldWidth; column++) {
-            tmp.push(0);
+        for (var column = 0; column < FIELD_WIDTH; column++) {
+            tmp.push(EMPTY);
         }
         complField.push(tmp);
     }
 
-    this.getField("winner").fillColor = color.transparent;
-    this.getField("winner").borderColor = color.transparent;
+    this.getField("info").fillColor = color.transparent;
+    this.getField("info").borderColor = color.transparent;
+
+    printInfoText("Player " + (activePlayer + 1) + ": Please select a column.");
 
     % Init the GUI
     initialiseButtons();
 
-    draw();
+    drawAll();
 }
 
 /**
@@ -100,43 +99,41 @@ function initialise() {
  */
 function initialiseButtons() {
     % Assign each button the coresponding function and disable the highlights
-    % for (var x = 0; x < fieldWidth; x++) {
-    %     this.getField("col" + x).setAction("MouseUp", "addToColumn(x);");
-    %     this.getField("col" + x).highlight="invert";
-    % }
-
     this.getField("restart").setAction("MouseUp", "restart();");
     this.getField("restart").highlight="none";
 
-    this.getField("col0").setAction("MouseUp", "addToColumn(0);");
-    this.getField("col0").borderColor = color.transparent;
-    this.getField("col0").highlight="none";
-    this.getField("col1").setAction("MouseUp", "addToColumn(1);");
-    this.getField("col1").borderColor = color.transparent;
-    this.getField("col1").highlight="none";
-    this.getField("col2").setAction("MouseUp", "addToColumn(2);");
-    this.getField("col2").borderColor = color.transparent;
-    this.getField("col2").highlight="none";
-    this.getField("col3").setAction("MouseUp", "addToColumn(3);");
-    this.getField("col3").borderColor = color.transparent;
-    this.getField("col3").highlight="none";
-    this.getField("col4").setAction("MouseUp", "addToColumn(4);");
-    this.getField("col4").borderColor = color.transparent;
-    this.getField("col4").highlight="none";
-    this.getField("col5").setAction("MouseUp", "addToColumn(5);");
-    this.getField("col5").borderColor = color.transparent;
-    this.getField("col5").highlight="none";
-    this.getField("col6").setAction("MouseUp", "addToColumn(6);");
-    this.getField("col6").borderColor = color.transparent;
-    this.getField("col6").highlight="none";
-    this.getField("col7").setAction("MouseUp", "addToColumn(7);");
-    this.getField("col7").borderColor = color.transparent;
-    this.getField("col7").highlight="none";
+    % Each field needs to be connected to an input function
+    var funcName = "addToColumn";
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        var callbackName = funcName + "(" + x.toString() + ");";
+        this.getField("col" + x).setAction("MouseDown", callbackName);
+        this.getField("col" + x).highlight="none";
+        this.getField("col" + x).borderColor = color.transparent;
+    }
 
     % Tooltip setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
     this.getField("tooltipbtn").highlight="none";
+}
+
+/**
+ * Restarts the game by clearing the field array.
+ */
+function restart() {
+    % Clear complField and redraw
+    var field;
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        for (var y = 0; y < FIELD_HEIGHT; y++) {
+            complField[y][x] = EMPTY;
+
+            draw(x, y);
+        }
+    }
+
+    activePlayer = 0;
+    printInfoText("Restarted - Player " + (activePlayer + 1) + ": Please select a column.");
+    gameover = false;
 }
 
 /**
@@ -174,70 +171,66 @@ function tooltip(on) {
     }
 }
 
-function restart() {
-    % Clear complField and redraw
-    var field;
-    for (var x = 0; x < fieldWidth; x++) {
-        for (var y = 0; y < fieldHeight; y++) {
-            complField[y][x] = 0;
-
-            field = this.getField("pos" + x + "-" + y);
-            field.delay = true;
-            field.borderColor = color.white;
-            field.fillColor = color.white;
-            field.delay = false;
-        }
-    }
-
-    activePlayer = 0;
-    gameover = false;
-    this.getField("winner").value = "";
-}
-
-function draw() {
-    var field;
-    for (var x = 0; x < fieldWidth; x++) {
-        for (var y = 0; y < fieldHeight; y++) {
-            field = this.getField("pos" + x + "-" + y);
-            field.delay = true;
-            var value = complField[y][x];
-            if (value > 0) {
-                field.fillColor = colors[value - 1];
-            } else {
-                field.fillColor = color.white;
-            }
-            field.delay = false;
-        }
-    }
-}
-
+%%%%%%%%%%%%%
+% Gamelogic %
+%%%%%%%%%%%%%
+/**
+ * Add a stone to the selected column (x).
+ * Also selects new player and redraws.
+ *
+ * @param {Number} x The column to place the stone in.
+ */
 function addToColumn(x) {
     if (gameover) {
         return;
     }
 
     var y = getYFromX(x);
+    % Column is full
+    if (y == -1) {
+        printInfoText("This Column is full. Player " + (activePlayer + 1) + ": Select a valid column.");
+        return;
+    }
     complField[y][x] = activePlayer + 1;
 
     checkGameover(x, y);
 
     activePlayer++;
-    if (activePlayer >= playerCount) {
-        activePlayer -= playerCount;
+    % Reset player count
+    if (activePlayer >= PLAYER_COUNT) {
+        activePlayer -= PLAYER_COUNT;
     }
 
-    draw();
+    if (!gameover) {
+        printInfoText("Player " + (activePlayer + 1) + ": Please select a column.");
+    }
+
+    draw(x, y);
 }
 
+/**
+ * Returns the first empty spot for the given column (x).
+ *
+ * @param {Number} x The column for which the y should be returned.
+ */
 function getYFromX(x) {
-    for (var y = 0; y < fieldHeight; y++) {
-        if (complField[y][x] != 0) {
+    for (var y = 0; y < FIELD_HEIGHT; y++) {
+        if (complField[y][x] != EMPTY) {
             return y - 1;
         }
     }
-    return fieldHeight - 1;
+    return FIELD_HEIGHT - 1;
 }
 
+/**
+ * Checks whether the current move concludes the game and someone won.
+ * The position of the last move is used to check the neighbourhood for
+ * potential lines in all possible directions. Sets gameover if
+ * a line was found.
+ *
+ * @param {Number} x The x coordinate
+ * @param {Number} y The y coordinate
+ */
 function checkGameover(x, y) {
     var count = 0;
     var maxCount = 0;
@@ -256,22 +249,63 @@ function checkGameover(x, y) {
         for (var wp = -WINNING_PIECES + 1; wp < WINNING_PIECES; wp++) {
             var nx = x + directions[dirIdx] * wp;
             var ny = y + directions[dirIdx + 1] * wp;
-            if (nx < 0 || nx >= fieldWidth || ny < 0 || ny >= fieldHeight || complField[ny][nx] != activePlayer + 1) {
+            if (nx < 0 || nx >= FIELD_WIDTH || ny < 0 || ny >= FIELD_HEIGHT || complField[ny][nx] != activePlayer + 1) {
                 count = 0;
             } else {
                 count++;
                 maxCount = count;
             }
         }
+        % If there are enough pieces found, color the winning pieces and set gameover
         if (maxCount >= WINNING_PIECES) {
             gameover = true;
             colorWinner(x, y, dirIdx);
-            printWinner();
+            printInfoText("The winner is: Player " + (activePlayer + 1));
         }
     }
 }
 
-% TODO improve this
+%%%%%%%%%%%%%%%%%%%%%
+% Draw and coloring %
+%%%%%%%%%%%%%%%%%%%%%
+/**
+ * Draws the complete field.
+ */
+function drawAll() {
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        for (var y = 0; y < FIELD_HEIGHT; y++) {
+            draw(x, y);
+        }
+    }
+}
+
+/**
+ * Draw the field at the coordinates x, y.
+ *
+ * @param {Number} x The x coordinate
+ * @param {Number} y The y coordinate
+ */
+function draw(x, y) {
+    field = this.getField("pos" + x + "-" + y);
+    field.delay = true;
+    var value = complField[y][x];
+    if (value > EMPTY) {
+        field.fillColor = COLORS[value - 1];
+    } else {
+        field.fillColor = color.white;
+        field.borderColor = color.transparent;
+    }
+    field.delay = false;
+}
+
+/**
+ * Marks all stones in a line with x, y and the given direction (dirIdx),
+ * given the stone has the same player index as the stone at x, y.
+ *
+ * @param {Number} x The x coordinate
+ * @param {Number} y The y coordinate
+ * @param {Number} dirIdx The direction index
+ */
 function colorWinner(x, y, dirIdx) {
     var directions = [
         0, 1,
@@ -279,25 +313,33 @@ function colorWinner(x, y, dirIdx) {
         1, 0,
         1, -1
     ]
-    % Allows for highlighting all left and right stones
+    % Allows for highlighting all stones left and right from the x, y
     for (var mul = -1; mul < 2; mul += 2) {
         for (var wp = 0; wp < WINNING_PIECES; wp++) {
             var nx = x + directions[dirIdx] * wp * mul;
             var ny = y + directions[dirIdx + 1] * wp * mul;
-            if (nx < 0 || nx >= fieldWidth || ny < 0 || ny >= fieldHeight || complField[ny][nx] != activePlayer + 1) {
+            if (nx < 0 || nx >= FIELD_WIDTH || ny < 0 || ny >= FIELD_HEIGHT || complField[ny][nx] != activePlayer + 1) {
                 wp = WINNING_PIECES;
             } else {
                 var field = this.getField("pos" + nx + "-" + ny);
                 field.delay = true;
-                field.borderColor = highlightcolor;
+                field.borderColor = HIGHLIGHT_COLOR;
                 field.delay = false;
             }
         }
     }
 }
 
-function printWinner() {
-    this.getField("winner").value = "The winner is: Player " + (activePlayer + 1);
+/**
+ * Print information about the game.
+ *
+ * @param {String} text Info string
+ */
+function printInfoText(text) {
+    var field = this.getField("info");
+    field.delay = true;
+    field.value = text;
+    field.delay = false;
 }
 
 \end{insDLJS}
@@ -311,16 +353,18 @@ function printWinner() {
 
     \begin{Form}
 
+        % Header
         \begin{multicols}{2}
+            % Title
             \section*{Connectfour}
         \columnbreak
+            % Tooltip object
             \begin{flushright}%
-            \PushButton[name=tooltipbtn, bordercolor=white]{%
-                \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
-                    \centering
-                    ?\strut
-                \end{tcolorbox}%
-            }
+                \PushButton[name=tooltipbtn, bordercolor=white]{%
+                    \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
+                        \centering?\strut{}
+                    \end{tcolorbox}%
+                }
             \end{flushright}%
         \end{multicols}
 
@@ -328,27 +372,21 @@ function printWinner() {
         \def\blocksize{\dimexpr (\linewidth-\result pt)/\fieldWidth \relax}
 
         \begin{tcolorbox}
+            % Column selection buttons
             \begin{tabularx}{\textwidth}{@{} *{\fieldWidth}{X} @{}}%
                 \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
-                    \xintifForLast{
-                        \PushButton[name=col#1, bordercolor=black]{
-                            \begin{tcolorbox}
-                                \centering
-                                Col#1
-                            \end{tcolorbox}
-                        }
+                    \PushButton[name=col#1, bordercolor=black]{
+                        \begin{tcolorbox}
+                            \centering
+                            Col#1
+                        \end{tcolorbox}
                     }
-                    {
-                        \PushButton[name=col#1, bordercolor=black]{
-                            \begin{tcolorbox}
-                                \centering
-                                Col#1
-                            \end{tcolorbox}
-                        } &
-                    }%
+                    % Have the cell divider for all elements
+                    % that are not the last one
+                    \xintifForLast{}{&}%
                 }%
             \end{tabularx}%
-            %
+            % The gamefield
             \begin{flushright}
                 \xintFor* #2 in {\xintSeq{0}{\fieldHeight-1}} \do {%
                     \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
@@ -361,6 +399,7 @@ function printWinner() {
             \end{flushright}
         \end{tcolorbox}
 
+        % Game related buttons
         \begin{center}%
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
                 \PushButton[name=restart, bordercolor=white]{
@@ -370,7 +409,7 @@ function printWinner() {
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
-                    \TextField[name=winner, width=\linewidth, readonly=true]{}
+                    \TextField[name=info, width=\linewidth, readonly=true]{}
                 \end{tcolorbox}
             \end{tabularx}
         \end{center}
