--- a/src/tetris.tex
+++ b/src/tetris.tex
@@ -5,8 +5,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
-\usepackage[latin1]{inputenc}
-\usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
 \usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
@@ -38,19 +36,19 @@
 % Inhalt der Umgebung wird in JSDateiname.djs gespeichert und steht im PDF zur Verfügung
 \begin{insDLJS}[]{JSDateiname}{irgendeinTitel}
 
-const GAME_DESC = "Text.\
-Text.\
-Text.\
-Text.\
-Text.";
+const GAME_DESC = "Tetris is a puzzle game where you get stones of a specific shape.\
+These must be placed in such a manner that they build a complete line.\
+A line will be removed to make space for more stones. With increasing amount\
+of removed lines the gamespeed will increase. When the top of the field\
+is reached the game is over.";
 
 % Outside variables
-const fieldWidth = AFMakeNumber(\fieldWidth);
-const halfFieldWidth = Math.floor(fieldWidth / 2.0);
-const fieldHeight = AFMakeNumber(\fieldHeight);
+const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
+const HALF_FIELD_WIDTH = Math.floor(FIELD_WIDTH / 2.0);
+const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
 
 % Constants
-%const EMPTY = 0;
+const EMPTY = 0;
 
 % Globals
 % Animation interval variable
@@ -65,61 +63,61 @@ var lineCount = 0;
 
 var stone = new Array();
 var shouldEmitStone = true;
-const stones = new Array(
+const STONES = new Array(
     % Bar
     new Array(
-        new Array(halfFieldWidth - 2, 0),
-        new Array(halfFieldWidth - 1, 0),
-        new Array(halfFieldWidth, 0),
-        new Array(halfFieldWidth + 1, 0)
+        new Array(HALF_FIELD_WIDTH - 2, 0),
+        new Array(HALF_FIELD_WIDTH - 1, 0),
+        new Array(HALF_FIELD_WIDTH, 0),
+        new Array(HALF_FIELD_WIDTH + 1, 0)
     ),
     % Cube
     new Array(
-        new Array(halfFieldWidth - 1, 0),
-        new Array(halfFieldWidth - 1, 1),
-        new Array(halfFieldWidth, 0),
-        new Array(halfFieldWidth, 1)
+        new Array(HALF_FIELD_WIDTH - 1, 0),
+        new Array(HALF_FIELD_WIDTH - 1, 1),
+        new Array(HALF_FIELD_WIDTH, 0),
+        new Array(HALF_FIELD_WIDTH, 1)
     ),
     % T
     new Array(
-        new Array(halfFieldWidth - 1, 0),
-        new Array(halfFieldWidth, 0),
-        new Array(halfFieldWidth, 1),
-        new Array(halfFieldWidth + 1, 0)
+        new Array(HALF_FIELD_WIDTH - 1, 0),
+        new Array(HALF_FIELD_WIDTH, 0),
+        new Array(HALF_FIELD_WIDTH, 1),
+        new Array(HALF_FIELD_WIDTH + 1, 0)
     ),
     % Z
     new Array(
-        new Array(halfFieldWidth - 1, 0),
-        new Array(halfFieldWidth, 0),
-        new Array(halfFieldWidth, 1),
-        new Array(halfFieldWidth + 1, 1)
+        new Array(HALF_FIELD_WIDTH - 1, 0),
+        new Array(HALF_FIELD_WIDTH, 0),
+        new Array(HALF_FIELD_WIDTH, 1),
+        new Array(HALF_FIELD_WIDTH + 1, 1)
     ),
     % L
     new Array(
-        new Array(halfFieldWidth - 1, 0),
-        new Array(halfFieldWidth, 0),
-        new Array(halfFieldWidth + 1, 0),
-        new Array(halfFieldWidth + 1, 1)
+        new Array(HALF_FIELD_WIDTH - 1, 0),
+        new Array(HALF_FIELD_WIDTH, 0),
+        new Array(HALF_FIELD_WIDTH + 1, 0),
+        new Array(HALF_FIELD_WIDTH + 1, 1)
     ),
     % J
     new Array(
-        new Array(halfFieldWidth - 1, 1),
-        new Array(halfFieldWidth - 1, 0),
-        new Array(halfFieldWidth, 0),
-        new Array(halfFieldWidth + 1, 0)
+        new Array(HALF_FIELD_WIDTH - 1, 1),
+        new Array(HALF_FIELD_WIDTH - 1, 0),
+        new Array(HALF_FIELD_WIDTH, 0),
+        new Array(HALF_FIELD_WIDTH + 1, 0)
     ),
     % S
     new Array(
-        new Array(halfFieldWidth - 1, 1),
-        new Array(halfFieldWidth, 1),
-        new Array(halfFieldWidth, 0),
-        new Array(halfFieldWidth + 1, 0)
+        new Array(HALF_FIELD_WIDTH - 1, 1),
+        new Array(HALF_FIELD_WIDTH, 1),
+        new Array(HALF_FIELD_WIDTH, 0),
+        new Array(HALF_FIELD_WIDTH + 1, 0)
     )
 );
 
 % Color data
 var stoneColor = color.black;
-const colors = new Array(
+const COLORS = new Array(
     color.black,
     [ "RGB", 0.843, 0.078, 0.058 ],
     [ "RGB", 0.203, 0.603, 0.054 ],
@@ -127,17 +125,17 @@ const colors = new Array(
     [ "RGB", 0.560, 0.078, 0.533 ]
 );
 
-%%%%%%%%%%%%%%%%%%
-% Initialisation %
-%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Initialisation and Restart %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 /**
  * Initialise the default game state.
  */
 function initialise() {
-    for (var row = 0; row < fieldHeight; row++) {
+    for (var row = 0; row < FIELD_HEIGHT; row++) {
         var tmp = new Array();
-        for (var column = 0; column < fieldWidth; column++) {
-            tmp.push(0);
+        for (var column = 0; column < FIELD_WIDTH; column++) {
+            tmp.push(EMPTY);
         }
         complField.push(tmp);
     }
@@ -172,10 +170,31 @@ function initialiseButtons() {
     this.getField("turnRight").setAction("MouseUp", "move('e');");
     this.getField("turnRight").highlight="invert";
 
+    this.getField("start").setAction("MouseUp", "restart();");
+    this.getField("start").highlight="invert";
+
     % Tooltip setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
     this.getField("tooltipbtn").highlight="none";
+}
+
+/**
+ * Resets the gamefield to an empty field and restarts the game.
+ */
+function restart() {
+    this.getField("points").value = 0;
+    for (var row = 0; row < FIELD_HEIGHT; row++) {
+        for (var column = 0; column < FIELD_WIDTH; column++) {
+            complField[row][column] = EMPTY;
+        }
+    }
+
+    loopTimer = 0;
+    speed = AFMakeNumber(\GAMESPEED);
+    lineCount = 0;
+
+    shouldEmitStone = true;
 }
 
 /**
@@ -216,23 +235,34 @@ function tooltip(on) {
 %%%%%%%%
 % Loop %
 %%%%%%%%
+/**
+ * Main loop, responsible for processing the input, updating the field
+ * and drawing.
+ */
 function runAll() {
     loopTimer++;
     processInput();
     updateField();
     if (!shouldEmitStone) {
-        draw();
+        drawAll();
+        % Stone needs to be removed so the gameover detection does not
+        % misinterpret the current stone as gamelosing.
+        % This is also needed for collision detection.
         removeStone();
     } else if (gameover()) {
         restart();
     }
 }
 
-%%%%%%%%%
-% Logic %
-%%%%%%%%%
+%%%%%%%%%%%%%
+% Gamelogic %
+%%%%%%%%%%%%%
+/**
+ * Checks the top most line if there is a stone there.
+ * @return {Boolean} If the game is over true else false.
+ */
 function gameover() {
-    for (var column = 0; column < fieldWidth; column++) {
+    for (var column = 0; column < FIELD_WIDTH; column++) {
         if (complField[0][column] != 0) {
             return true;
         }
@@ -240,22 +270,18 @@ function gameover() {
     return false
 }
 
-function restart() {
-    this.getField("points").value = 0;
-    for (var row = 0; row < fieldHeight; row++) {
-        for (var column = 0; column < fieldWidth; column++) {
-            complField[row][column] = 0;
-        }
-    }
-}
-
+/**
+ * Emits a new random stone by adding it to the field.
+ */
 function emitStone() {
-    stoneColor = Math.floor(Math.random() * colors.length) + 1;
-
-    var stoneIdx = Math.floor(Math.random() * stones.length);
-    for (var i = 0; i < stones[stoneIdx].length; i++)
-        stone[i] = stones[stoneIdx][i].slice();
-
+    % Random color
+    stoneColor = Math.floor(Math.random() * COLORS.length) + 1;
+    % Random shape
+    var stoneIdx = Math.floor(Math.random() * STONES.length);
+    for (var i = 0; i < STONES[stoneIdx].length; i++) {
+        stone[i] = STONES[stoneIdx][i].slice();
+    }
+    % Set the stone
     for (var pice = 0; pice < stone.length; pice++) {
         var x = stone[pice][0];
         var y = stone[pice][1];
@@ -264,48 +290,72 @@ function emitStone() {
     shouldEmitStone = false;
 }
 
+/**
+ * Check if the stone collides with something below it or if it
+ * reached the bottom of the field.
+ * @return {Boolean} True when colliding else false
+ */
 function collidesOrHeight() {
     for (var pice = 0; pice < stone.length; pice++) {
         var x = stone[pice][0];
         var y = stone[pice][1];
-        if (y + 1 >= fieldHeight || complField[y + 1][x] != 0) {
+        if (y + 1 >= FIELD_HEIGHT || complField[y + 1][x] != EMPTY) {
             return true;
         }
     }
     return false;
 }
 
+/**
+ * Check if the stone collides with something on the left or if it
+ * reached the left border of the field.
+ * @return {Boolean} True when colliding else false
+ */
 function collidesOrLeft() {
     for (var pice = 0; pice < stone.length; pice++) {
         var x = stone[pice][0];
         var y = stone[pice][1];
-        if (x - 1 < 0 || complField[y][x - 1] != 0) {
+        if (x - 1 < 0 || complField[y][x - 1] != EMPTY) {
             return true;
         }
     }
     return false;
 }
 
+/**
+ * Check if the stone collides with something on the right or if it
+ * reached the right border of the field.
+ * @return {Boolean} True when colliding else false
+ */
 function collidesOrRight() {
     for (var pice = 0; pice < stone.length; pice++) {
         var x = stone[pice][0];
         var y = stone[pice][1];
-        if (x + 1 >= fieldWidth || complField[y][x + 1] != 0) {
+        if (x + 1 >= FIELD_WIDTH || complField[y][x + 1] != EMPTY) {
             return true;
         }
     }
     return false;
 }
 
+/**
+ * Removes all full lines of the field if there are any by
+ * moving all lines above them down by one.
+ * Add a new line at the top.
+ */
 function removeLines() {
-    for (var y = fieldHeight - 1; y >= 0; y--) {
-        for (var x = 0; x < fieldWidth; x++) {
-            if (complField[y][x] == 0) {
-                x = fieldWidth;
-            } else if (x == fieldWidth - 1 && complField[y][x] > 0) {
+    for (var y = FIELD_HEIGHT - 1; y >= 0; y--) {
+        for (var x = 0; x < FIELD_WIDTH; x++) {
+            % Line is not completly full
+            if (complField[y][x] == EMPTY) {
+                x = FIELD_WIDTH;
+            }
+            % Last field of line is reached and it is not empty
+            else if (x == FIELD_WIDTH - 1 && complField[y][x] > EMPTY) {
 
                 this.getField("points").value += 1000;
                 lineCount++;
+                % Adjust speed -> increase difficulty
                 if (lineCount == 5 && speed > 1) {
                     lineCount = 0;
                     speed--;
@@ -316,8 +366,8 @@ function removeLines() {
                 }
                 % Override the top line with a new one
                 var tmp = new Array();
-                for (var column = 0; column < fieldWidth; column++) {
-                    tmp.push(0);
+                for (var column = 0; column < FIELD_WIDTH; column++) {
+                    tmp.push(EMPTY);
                 }
                 complField[0] = tmp;
                 % Adjust y such that the shifted line is also tested
@@ -328,11 +378,17 @@ function removeLines() {
     }
 }
 
+/**
+ * Emits new stone if needed or moves the current one unless there is a
+ * collision then the stone is added to the field as unmoveable.
+ */
 function updateField() {
     if (shouldEmitStone) {
         emitStone();
     }
     else {
+        % Move if there is no collision and it is time otherwise
+        % Add without movement
         if (!collidesOrHeight()) {
             if (loopTimer >= speed) {
                 this.getField("points").value++;
@@ -363,33 +419,26 @@ function updateField() {
     }
 }
 
+/**
+ * Removes the stone from the field.
+ * Should be used temporary.
+ */
 function removeStone() {
     for (var pice = 0; pice < stone.length; pice++) {
         var x = stone[pice][0];
         var y = stone[pice][1];
-        complField[y][x] = 0;
-    }
-}
-
-function draw() {
-    for (var x = 0; x < fieldWidth; x++) {
-        for (var y = 0; y < fieldHeight; y++) {
-            field = this.getField("pos" + x + "-" + y);
-            field.delay = true;
-            if (complField[y][x] > 0) {
-                field.fillColor = colors[complField[y][x] - 1];
-            }
-            else {
-                field.fillColor = color.white;
-            }
-            field.delay = false;
-        }
+        complField[y][x] = EMPTY;
     }
 }
 
 %%%%%%%%%%%%
 % Movement %
 %%%%%%%%%%%%
+/**
+ * Process input made by keys of the keyboard.
+ * For this multiple input fields are needed for which the focus is shifted.
+ * The input is then parsed into actual movement.
+ */
 function processInput() {
     var iField1 = this.getField("input1");
     var iField2 = this.getField("input2");
@@ -399,6 +448,7 @@ function processInput() {
     iField2.delay = true;
     oField.delay = true;
 
+    % Get the input from the currently focused input element
     var movementString;
     if (focus) {
         iField1.setFocus();
@@ -407,8 +457,7 @@ function processInput() {
             oField.value = oField.value.slice(movementString.length);
         oField.value += movementString;
         iField2.value = "";
-    }
-    else {
+    } else {
         iField2.setFocus();
         movementString = iField1.value
         if (oField.value.length >= 10)
@@ -418,6 +467,7 @@ function processInput() {
     }
     focus = !focus;
 
+    % Process the input string
     for (var i = 0; i < movementString.length; i++) {
         move(movementString.charAt(i));
     }
@@ -427,37 +477,42 @@ function processInput() {
     oField.delay = false;
 }
 
+/**
+ * Move or rotate each part of the current stone in the direction given as
+ * parameter unless it does collide.
+ * @param {String} dir Expects a one char string that gives the direction.
+ */
 function move(dir) {
     switch(dir) {
-        case "s":
+        case "s": % One down
             if (!collidesOrHeight()) {
                 for (pice = 0; pice < stone.length; pice++) {
                     stone[pice][1]++;
                 }
             }
             break;
-        case " ":
+        case " ": % Full down
             while (!collidesOrHeight()) {
                 for (pice = 0; pice < stone.length; pice++) {
                     stone[pice][1]++;
                 }
             }
             break;
-        case "a":
+        case "a": % Left
             if (!collidesOrLeft()) {
                 for (pice = 0; pice < stone.length; pice++) {
                     stone[pice][0]--;
                 }
             }
             break;
-        case "d":
+        case "d": % Right
             if (!collidesOrRight()) {
                 for (pice = 0; pice < stone.length; pice++) {
                     stone[pice][0]++;
                 }
             }
             break;
-        case "q":
+        case "q": % Rotate
             var newPositions = new Array();
             for (var pice = 0; pice < stone.length; pice++) {
                 var res = rotate(stone[0][0], stone[0][1], stone[pice][0], stone[pice][1], 90.0);
@@ -470,7 +525,7 @@ function move(dir) {
                 stone[pice][1] = newPositions[pice][1];
             }
             break;
-        case "e":
+        case "e": % Rotate
             var newPositions = new Array();
             for (var pice = 0; pice < stone.length; pice++) {
                 var res = rotate(stone[0][0], stone[0][1], stone[pice][0], stone[pice][1], -90.0);
@@ -486,17 +541,34 @@ function move(dir) {
     }
 }
 
+/**
+ * Check the given position if it is out of bounds or collides.
+ * @param {Number} x The x coordinate.
+ * @param {Number} y The y coordinate.
+ * @return {Boolean} True if collides else false
+ */
 function collidesOrOOB(x, y) {
-    if (complField[y][x] > 0) {
+    % Collides
+    if (complField[y][x] > EMPTY) {
          return true;
     }
-    if (x < 0 || x >= fieldWidth || y < 0 || y >= fieldHeight) {
+    % Out of bounds
+    if (x < 0 || x >= FIELD_WIDTH || y < 0 || y >= FIELD_HEIGHT) {
         return true;
     }
     return false;
 }
 
-% https://stackoverflow.com/questions/17410809/how-to-calculate-rotation-in-2d-in-javascript
+/**
+ * Rotate the given coordinate around a given center.
+ * https://stackoverflow.com/questions/17410809/how-to-calculate-rotation-in-2d-in-javascript
+ * @param {Number} cx The center x coordinate.
+ * @param {Number} cy The center y coordinate.
+ * @param {Number} x The x coordinate.
+ * @param {Number} y The y coordinate.
+ * @param {Number} angle The angle at which to rotate.
+ * @return {Array} The new position.
+ */
 function rotate(cx, cy, x, y, angle) {
     var radians = (Math.PI / 180) * angle;
     var cos = Math.cos(radians);
@@ -504,6 +576,38 @@ function rotate(cx, cy, x, y, angle) {
     var nx = (cos * (x - cx)) + (sin * (y - cy)) + cx;
     var ny = (cos * (y - cy)) - (sin * (x - cx)) + cy;
     return [Math.round(nx), Math.round(ny)];
+}
+
+%%%%%%%%%%%%%%%%%%%%%
+% Draw and coloring %
+%%%%%%%%%%%%%%%%%%%%%
+/**
+ * Draw all fields.
+ */
+function drawAll() {
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        for (var y = 0; y < FIELD_HEIGHT; y++) {
+            draw(x, y);
+        }
+    }
+}
+
+/**
+ * Since only one field is updated with each input,
+ * only this field needs to be redrawn.
+ *
+ * @param {Number} x The x position.
+ * @param {Number} y The y position.
+ */
+function draw(x, y) {
+    var field = this.getField("pos" + x + "-" + y);
+    field.delay = true;
+    if (complField[y][x] > 0) {
+        field.fillColor = COLORS[complField[y][x] - 1];
+    } else {
+        field.fillColor = color.white;
+    }
+    field.delay = false;
 }
 
 \end{insDLJS}
@@ -517,16 +621,18 @@ function rotate(cx, cy, x, y, angle) {
 
     \begin{Form}
 
+        % Header
         \begin{multicols}{2}
+            % Title
             \section*{Tetris}
         \columnbreak
+            % Tooltip object
             \begin{flushright}%
-            \PushButton[name=tooltipbtn, bordercolor=white]{%
-                \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
-                    \centering
-                    ?\strut
-                \end{tcolorbox}%
-            }
+                \PushButton[name=tooltipbtn, bordercolor=white]{%
+                    \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
+                        \centering?\strut{}
+                    \end{tcolorbox}%
+                }
             \end{flushright}%
         \end{multicols}
 
@@ -535,6 +641,7 @@ function rotate(cx, cy, x, y, angle) {
         \FPeval{\result}{(\fieldHeight * 3 + 3)}
         \def\blocksizeH{\dimexpr (0.5\paperheight-\result pt)/\fieldHeight \relax}
 
+        % The gamefield
         \begin{tcolorbox}
             %\centering
             \begin{flushright}
@@ -547,6 +654,7 @@ function rotate(cx, cy, x, y, angle) {
             \end{flushright}
         \end{tcolorbox}
 
+        % Game related buttons
         \begin{center}%
             \begin{tabularx}{\textwidth}{@{} *{3}{X} @{}}%
                 \PushButton[name=start, bordercolor=white]{
